--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,8 +2,8 @@ name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
   push:
-    # only run this action after push to master branch
-    - 'master'
+    branches:
+      - 'master'
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
