--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
       - name: List files
-        run: ls
+        run: pwd
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
