--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,6 +17,11 @@ jobs:
           cp knime-scripting-templates/R/figure-templates.txt $RUNNER_WORKSPACE
           ls $RUNNER_WORKSPACE
           echo $GITHUB_WORKFLOW_SHA
+      - name: run shell script to build template files
+        run: |
+          chmod 770 knime-scripting-templates/build/build_templates.sh
+          knime-scripting-templates/build/build_templates.sh knime-scripting-templates/R/plots $RUNNER_WORKSPACE
+          ls -l $RUNNER_WORKSPACE
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "${{ runner.workspace }}/figure-templates.txt"
