--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -18,8 +18,8 @@ jobs:
           echo $GITHUB_WORKFLOW_SHA
       - name: run shell script to build template files
         run: |
-          chmod 770 knime-scripting-templates/build/build_templates.sh
-          knime-scripting-templates/build/build_templates.sh knime-scripting-templates/R/plots $RUNNER_WORKSPACE
+          chmod 770 ${GITHUB_WORKSPACE}/build/build_templates.sh
+          bash ${GITHUB_WORKSPACE}/build/build_templates.sh knime-scripting-templates/R/plots $RUNNER_WORKSPACE
           ls -l $RUNNER_WORKSPACE
       - uses: ncipollo/release-action@v1
         with:
