--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -19,7 +19,7 @@ jobs:
       - name: run shell script to build template files
         run: |
           chmod 770 ${GITHUB_WORKSPACE}/build/build_templates.sh
-          bash ${GITHUB_WORKSPACE}/build/build_templates.sh knime-scripting-templates/R/plots $RUNNER_WORKSPACE
+          bash ${GITHUB_WORKSPACE}/build/build_templates.sh ${GITHUB_WORKSPACE}/R/plots $RUNNER_WORKSPACE
           ls -l $RUNNER_WORKSPACE
       - uses: ncipollo/release-action@v1
         with:
