--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           chmod 770 ${GITHUB_WORKSPACE}/build/build_templates.sh
           ${GITHUB_WORKSPACE}/build/build_templates.sh ${GITHUB_WORKSPACE}/R/plots $RUNNER_WORKSPACE
-          ls -l $RUNNER_WORKSPACE
+          more $RUNNER_WORKSPACE/R_plots_templates.txt
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "${{ runner.workspace }}/figure-templates.txt"
