--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,7 +17,9 @@ jobs:
           ls $RUNNER_WORKSPACE
           echo $GITHUB_WORKFLOW_SHA
       - name: Set timestamp
-        run: date +%Y-%m-%d_%H-%M-%S >> $env:$DATETIME
+        run: |
+          date +%Y-%m-%d_%H-%M-%S >> $env:$DATETIME
+          echo $DATETIME
       - name: show all environment variables for this workflow
         run: env
       - name: run shell script to build template files
