--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -18,7 +18,7 @@ jobs:
           echo $GITHUB_WORKFLOW_SHA
       - name: Set timestamp
         run: |
-          date +%Y-%m-%d_%H-%M-%S >> $env:$DATETIME
+          "DATETIME=12345" >> $GITHUB_ENV
           echo $DATETIME
       - name: show all environment variables for this workflow
         run: env
